<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/love_sister"
        android:text="@string/design_by_nvaibhav_tormal"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"
        android:textColor="#181717"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_your_story_nwith_us"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/textcolor"
        android:fontFamily="@font/love_sister"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_Button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/love_sister"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:elevation="5dp"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:background="@drawable/redgredient" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_here"
        android:textSize="14sp"
        android:textColor="@color/textcolor"
        android:fontFamily="@font/yeonsung"
        app:layout_constraintEnd_toEndOf="@+id/login_Button"
        app:layout_constraintStart_toStartOf="@+id/login_Button"
        app:layout_constraintTop_toBottomOf="@+id/login_Button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_Button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/blue_gredient"
        android:fontFamily="@font/love_sister"
        android:text="@string/register"
        android:elevation="5dp"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>