<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.SignInRegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/love_sister"
        android:text="@string/share_your_story_nwith_us"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/login_EmailAddress"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/yeonsung"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:textColorHint="@color/textcolor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/yeonsung"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColorHint="@color/textcolor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login_EmailAddress"
        app:layout_constraintStart_toStartOf="@+id/login_EmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/login_EmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_Button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/redgredient"
        android:elevation="5dp"
        android:fontFamily="@font/love_sister"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        app:layout_goneMarginTop="300dp" />

    <TextView
        android:id="@+id/register_new_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/new_here"
        android:textColor="@color/textcolor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_Button"
        app:layout_constraintStart_toStartOf="@+id/login_Button"
        app:layout_constraintTop_toBottomOf="@+id/login_Button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_Button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/blue_gredient"
        android:elevation="5dp"
        android:fontFamily="@font/love_sister"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/cwhite"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/register_new_here"
        app:layout_constraintStart_toStartOf="@id/register_new_here"
        app:layout_constraintTop_toBottomOf="@id/register_new_here" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="200dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/register_userImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/userplus4" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_blue"
        android:drawableStart="@drawable/user_plus"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/yeonsung"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_blue"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="16dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/yeonsung"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintStart_toStartOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_blue"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="16dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/yeonsung"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/left_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>